# l4d2-internal-base

./: .gitignore  CMakeLists.txt
.github/workflows/: download-artifacts.yml  msbuild-test.yml  msbuild.yml
src/: DllMain.cpp  l4d2_base.vcxproj  l4d2_base.vcxproj.filters
src/Entry/: Entry.cpp  Entry.h
src/Features/ESP/: ESP.cpp  ESP.h
src/Features/Manager/: Manager.cpp  Manager.h  RotationManager.cpp  RotationManager.h
src/Features/Manager/Module/: ModuleHeader.h
src/Features/Manager/Module/Modules/Combat/: AimAssist.cpp  AimAssist.h  Aimbot.cpp  Aimbot.h  NoSpread.cpp  NoSpread.h
src/Features/Manager/Module/Modules/Player/: BunnyHop.cpp  BunnyHop.h
src/Features/Manager/Module/Modules/Render/: Arraylist.cpp  Arraylist.h  ESPHelper.cpp  ESPHelper.h  Monitor.cpp  Monitor.h
src/Features/Manager/Module/Utils/: FindTarget.cpp  FindTarget.h  UtilsCollector.h
src/Hooks/BaseClient/: BaseClient.cpp
src/Hooks/BasePlayer/: BasePlayer.cpp
src/Hooks/CL_Main/: CL_Main.cpp
src/Hooks/ClientMode/: ClientMode.cpp  ClientMode.h
src/Hooks/EngineVGui/: EngineVGui.cpp
src/Hooks/TerrorPlayer/: TerrorPlayer.cpp
src/Hooks/WndProc/: WndProc.cpp  WndProc.h
src/SDK/DrawManager/: DrawManager.cpp  DrawManager.h
src/SDK/GameUtil/: GameUtil.cpp  GameUtil.h
src/SDK/KeyValues/: KeyValues.cpp
src/SDK/L4D2/Entities/: C_BaseAnimating.h  C_TerrorPlayer.h  C_TerrorWeapon.h
src/SDK/L4D2/Includes/: globalvars_base.h
src/SDK/L4D2/Interfaces/: EngineTrace.h
src/Util/Math/: Math.cpp  Math.h
src/Util/Math/Vector/: Vector.h
